[package]
name = "abstract-tendermint-staking-api"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

exclude = ["contract.wasm", "hash.txt"]


[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["export"]
export = []
boot = ["dep:abstract-boot", "dep:boot-core"]
schema = ["abstract-api/schema"]


# Keep as is until TendermintStake updates.
[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
thiserror = { workspace = true }
abstract-core = { workspace = true }
abstract-sdk = { workspace = true }
abstract-api = { workspace = true }

boot-core = { workspace = true, optional = true }
abstract-boot = { workspace = true, optional = true }

[dev-dependencies]
abstract-boot = { workspace = true, features = ["daemon"] }
tokio = { workspace = true }
semver = { workspace = true }
anyhow = { workspace = true }
speculoos = { workspace = true }
dotenv = "0.15.0"
env_logger = "0.10.0"
clap = { workspace = true }
abstract-testing = { workspace = true }
abstract-sdk = { workspace = true, features = ["test-utils"] }
boot-cw-plus = { workspace = true }

